# orrery

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
agents/devops-assistant/: README.md  pyproject.toml  run_persistent.py
agents/devops-assistant/devops_assistant/: .env.example  agent.py  docker_tools.py
agents/devops-assistant/tests/: test_docker_tools.py
agents/docker-agent/: pyproject.toml
agents/docker-agent/tests/: test_docker_eval.py
agents/elasticsearch/: README.md  pyproject.toml
agents/elasticsearch/elasticsearch_agent/: .env.example  agent.py  eck.py  tools.py
agents/elasticsearch/tests/: test_eck_tools.py  test_elasticsearch_eval.py  test_elasticsearch_tools.py
agents/elasticsearch/tests/evals/: cluster_and_indices.test.json  eck.test.json
agents/google-chat-bot/: README.md  pyproject.toml
agents/google-chat-bot/google_chat_bot/: app.py  auth.py  cards.py  chat_client.py  config.py  confirmation.py  handler.py  pubsub_worker.py
agents/google-chat-bot/tests/: test_app.py  test_auth.py  test_cards.py  test_handler.py  test_pubsub_worker.py
agents/k8s-health/: README.md  pyproject.toml
agents/k8s-health/k8s_health_agent/: .env.example  agent.py  operators.py  tools.py
agents/k8s-health/tests/: test_k8s_operators.py  test_k8s_tools.py
agents/kafka-health/: README.md  pyproject.toml
agents/kafka-health/kafka_health_agent/: .env.example  agent.py  strimzi.py  tools.py
agents/kafka-health/tests/: test_agent_eval.py  test_kafka_tools.py  test_strimzi_tools.py
agents/kafka-health/tests/evals/: cluster_health.test.json  test_config.json
agents/observability/: README.md  pyproject.toml
agents/observability/observability_agent/: .env.example  agent.py  tools.py
agents/observability/tests/: test_observability_tools.py
agents/ops-journal/: README.md  pyproject.toml  run_persistent.py
agents/ops-journal/ops_journal_agent/: .env.example  agent.py  tools.py
agents/ops-journal/tests/: conftest.py  test_journal_tools.py
agents/orrery-assistant/: pyproject.toml
agents/orrery-assistant/orrery_assistant/: agent.py
agents/slack-bot/: .env.example  pyproject.toml
agents/slack-bot/slack_bot/: app.py  config.py  handler.py  socket_mode.py
agents/slack-bot/tests/: test_app.py
core/: README.md  pyproject.toml
core/ai_agents_core/: __init__.py  audit.py  base.py  config.py  error_handlers.py  guardrails.py  health.py  log.py  plugins.py  rbac.py  resilience.py  runner.py  validation.py
core/orrery_core/: __init__.py  operators.py  rbac.py  runner.py  tool_result.py
core/tests/: conftest.py  test_audit.py  test_config.py  test_context_cache.py  test_error_handlers.py  test_guardrails.py  test_health.py  test_log.py  test_memory.py  test_operators.py  test_plugins.py  test_rbac.py  test_resilience.py  test_tool_result.py  test_validation.py
deploy/helm/devops-assistant/: Chart.yaml  values.yaml
deploy/helm/devops-assistant/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/helm/orrery-assistant/: Chart.yaml  values.yaml
deploy/helm/orrery-assistant/templates/: _helpers.tpl  pubsub-worker-deployment.yaml  pubsub-worker-networkpolicy.yaml  pubsub-worker-pdb.yaml  pubsub-worker-serviceaccount.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
deploy/terraform/google-chat-bot/: README.md  main.tf  outputs.tf  variables.tf
docs/: adding-an-agent.md  agent-design-patterns.md  agents-overview.md  configuration.md  deployment.md  devops-assistant.md  gen_ref_pages.py  getting-started.md  guardrails.md  index.md  integrations.md  metrics.md  rbac-testing.md  slack-setup.md  tool-results.md  troubleshooting.md
docs/adr/: 001-rbac.md  002-agent-tool-vs-sub-agents.md
docs/config/: agents.md  general.md
docs/enhancements/: README.md  aep-001-adk-native-confirmation.md  aep-002-agent-evaluation.md  aep-003-memory-service.md  aep-004-loop-agent-remediation.md  aep-005-a2a-protocol.md  aep-006-artifacts.md  aep-007-context-caching.md  aep-008-skills.md  aep-009-streaming.md  aep-010-observability-tracing.md  aep-011-deployment-hardening.md  aep-012-custom-agents.md  aep-013-security-hardening.md  aep-014-supply-chain-security.md  aep-015-cost-observability.md  aep-016-load-chaos-testing.md  aep-017-runbooks-oncall.md  aep-018-pubsub-idempotency-hpa.md
docs/integrations/: google-chat-pubsub.md  google-chat-webhook.md  google-chat.md  slack.md
docs/stylesheets/: extra.css
infra/: alert_rules.yml  alertmanager.yml  prometheus.yml
kafka-health-agent/: README.md
tests/: test_guardrails.py
