[project]
name = "ai-agents"
version = "0.1.0"
description = "A collection of autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "kafka-health-agent",
    "k8s-health-agent",
    "observability-agent",
    "devops-assistant",
    "ops-journal",
    "slack-bot",
]

[tool.uv.sources]
ai-agents-core = { workspace = true }
kafka-health-agent = { workspace = true }
k8s-health-agent = { workspace = true }
observability-agent = { workspace = true }
devops-assistant = { workspace = true }
ops-journal = { workspace = true }
slack-bot = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[tool.uv.workspace]
members = ["core", "agents/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = [
    "ai_agents_core",
    "kafka_health_agent",
    "k8s_health_agent",
    "observability_agent",
    "devops_assistant",
    "ops_journal_agent",
    "slack_bot",
]

[tool.pytest.ini_options]
markers = [
    "eval: agent evaluation tests that call a real LLM (deselected by default)",
]
addopts = "-m 'not eval'"
testpaths = [
    "core/tests",
    "agents/kafka-health/tests",
    "agents/k8s-health/tests",
    "agents/observability/tests",
    "agents/devops-assistant/tests",
    "agents/ops-journal/tests",
    "agents/slack-bot/tests",
]
