[project]
name = "ai-agents"
version = "0.1.2"
description = "A collection of autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "docker-agent",
    "kafka-health-agent",
    "k8s-health-agent",
    "observability-agent",
    "devops-assistant",
    "ops-journal",
    "slack-bot",
    "google-chat-bot",
]

[project.optional-dependencies]
# Propagate postgres extra from ai-agents-core to the workspace root.
# Install with: uv sync --extra postgres
postgres = [
    "ai-agents-core[postgres]",
]

[tool.uv.sources]
ai-agents-core = { workspace = true }
docker-agent = { workspace = true }
kafka-health-agent = { workspace = true }
k8s-health-agent = { workspace = true }
observability-agent = { workspace = true }
devops-assistant = { workspace = true }
ops-journal = { workspace = true }
slack-bot = { workspace = true }
google-chat-bot = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
    "ty",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7.0",
]

[tool.uv.workspace]
members = ["core", "agents/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = [
    "ai_agents_core",
    "docker_agent",
    "kafka_health_agent",
    "k8s_health_agent",
    "observability_agent",
    "devops_assistant",
    "ops_journal_agent",
    "slack_bot",
]

[tool.pytest.ini_options]
markers = [
    "eval: agent evaluation tests that call a real LLM (deselected by default)",
]
addopts = "-m 'not eval'"
testpaths = [
    "core/tests",
    "agents/docker-agent/tests",
    "agents/kafka-health/tests",
    "agents/k8s-health/tests",
    "agents/observability/tests",
    "agents/devops-assistant/tests",
    "agents/ops-journal/tests",
    "agents/slack-bot/tests",
]
