[project]
name = "orrery"
version = "0.1.8"
description = "A collection of autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "orrery-core",
    "docker-agent",
    "elasticsearch-agent",
    "kafka-health-agent",
    "k8s-health-agent",
    "observability-agent",
    "orrery-assistant",
    "ops-journal",
    "slack-bot",
    "google-chat-bot",
]

[project.optional-dependencies]
# Propagate postgres extra from orrery-core to the workspace root.
# Install with: uv sync --extra postgres
postgres = [
    "orrery-core[postgres]",
]

[tool.uv.sources]
orrery-core = { workspace = true }
docker-agent = { workspace = true }
elasticsearch-agent = { workspace = true }
kafka-health-agent = { workspace = true }
k8s-health-agent = { workspace = true }
observability-agent = { workspace = true }
orrery-assistant = { workspace = true }
ops-journal = { workspace = true }
slack-bot = { workspace = true }
google-chat-bot = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.0.0",
    "ruff>=0.15.12",
    "ty",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-gen-files>=0.6.1",
    "pymdown-extensions>=10.21.2",
]

[tool.uv.workspace]
members = ["core", "agents/*"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = [
    "orrery_core",
    "docker_agent",
    "elasticsearch_agent",
    "kafka_health_agent",
    "k8s_health_agent",
    "observability_agent",
    "orrery_assistant",
    "ops_journal_agent",
    "slack_bot",
]

[tool.pytest.ini_options]
markers = [
    "eval: agent evaluation tests that call a real LLM (deselected by default)",
]
addopts = "-m 'not eval'"
filterwarnings = [
    "ignore:\\[EXPERIMENTAL\\] feature.* is enabled:UserWarning:google.adk.features.*",
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning:google.genai.types",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:slowapi.extension",
]
testpaths = [
    "core/tests",
    "agents/docker-agent/tests",
    "agents/elasticsearch/tests",
    "agents/kafka-health/tests",
    "agents/k8s-health/tests",
    "agents/observability/tests",
    "agents/orrery-assistant/tests",
    "agents/ops-journal/tests",
    "agents/slack-bot/tests",
]
