[project]
name = "devops-assistant"
version = "0.1.0"
description = "DevOps orchestrator that delegates to specialized sub-agents"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "kafka-health-agent",
    "k8s-health-agent",
    "observability-agent",
    "ops-journal",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["devops_assistant*"]

[tool.uv.sources]
ai-agents-core = { workspace = true }
kafka-health-agent = { workspace = true }
k8s-health-agent = { workspace = true }
observability-agent = { workspace = true }
ops-journal = { workspace = true }
