[project]
name = "google-chat-bot"
version = "0.1.9"
description = "Google Chat integration for AI Agents"
authors = [{ name = "Taoufiq" }]
requires-python = ">=3.14"
dependencies = [
    "orrery-core",
    "orrery-assistant",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "google-auth>=2.49.2",
    "google-cloud-pubsub>=2.37.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
orrery-core = { workspace = true }
orrery-assistant = { workspace = true }

[tool.setuptools.packages.find]
include = ["google_chat_bot*"]
