[project]
name = "kafka-health-agent"
version = "0.1.2"
description = "Agent for monitoring and managing Kafka cluster health"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "confluent-kafka>=2.13.2",
]

[tool.uv.sources]
ai-agents-core = { workspace = true }
