[project]
name = "kafka-health-agent"
version = "0.1.6"
description = "Agent for monitoring and managing Kafka cluster health"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "orrery-core",
    "confluent-kafka>=2.13.2",
    "kubernetes>=31.0.0",
]

[tool.uv.sources]
orrery-core = { workspace = true }
