[project]
name = "kafka-health-agent"
version = "0.1.9"
description = "Agent for monitoring and managing Kafka cluster health"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "orrery-core",
    "confluent-kafka>=2.14.0",
    "kubernetes>=31.0.0",
]

[tool.uv.sources]
orrery-core = { workspace = true }
