[project]
name = "orrery-assistant"
version = "0.1.7"
description = "DevOps orchestrator that delegates to specialized sub-agents"
requires-python = ">=3.14"
dependencies = [
    "orrery-core",
    "docker-agent",
    "elasticsearch-agent",
    "kafka-health-agent",
    "k8s-health-agent",
    "observability-agent",
    "ops-journal",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["orrery_assistant*"]

[tool.uv.sources]
orrery-core = { workspace = true }
docker-agent = { workspace = true }
elasticsearch-agent = { workspace = true }
kafka-health-agent = { workspace = true }
k8s-health-agent = { workspace = true }
observability-agent = { workspace = true }
ops-journal = { workspace = true }
