[project]
name = "slack-bot"
version = "0.1.0"
description = "Slack bot integration for the DevOps agent platform"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "devops-assistant",
    "slack-bolt>=1.18.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
ai-agents-core = { workspace = true }
devops-assistant = { workspace = true }
