[project]
name = "slack-bot"
version = "0.1.4"
description = "Slack bot integration for the DevOps agent platform"
requires-python = ">=3.11"
dependencies = [
    "orrery-core",
    "orrery-assistant",
    "slack-bolt>=1.18.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
orrery-core = { workspace = true }
orrery-assistant = { workspace = true }
