[project]
name = "slack-bot"
version = "0.1.9"
description = "Slack bot integration for the DevOps agent platform"
requires-python = ">=3.14"
dependencies = [
    "orrery-core",
    "orrery-assistant",
    "slack-bolt>=1.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.13.5",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
orrery-core = { workspace = true }
orrery-assistant = { workspace = true }
